--- a/Tomograph/packages.config
+++ b/Tomograph/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
   <package id="fo-dicom" version="4.0.7" targetFramework="net462" />
   <package id="fo-dicom.Desktop" version="4.0.7" targetFramework="net462" />
   <package id="NumSharp" version="0.30.0" targetFramework="net462" />
