--- a/Tomograph/packages.config
+++ b/Tomograph/packages.config
@@ -5,6 +5,8 @@
   <package id="fo-dicom" version="4.0.7" targetFramework="net462" />
   <package id="fo-dicom.Desktop" version="4.0.7" targetFramework="net462" />
   <package id="NumSharp" version="0.30.0" targetFramework="net462" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net462" />
+  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Memory" version="4.5.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
